# trust-swarm-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: graph_transformer.yaml
docs/: abstract_contributions_draft.md  citation_insertion_map.md  citation_insertion_map_information_fusion_update.md  cleaned_candidate_reference_list_v1.md  cleaned_candidate_reference_list_v2.md  combined_reference_list.md  conclusion_limitations_draft.md  experiment_checklist.md  experimental_setup_draft.md  figure_01_architecture_spec.md  figure_02_fusion_window_spec.md  figure_03_graph_temporal_model_spec.md  figure_04_confidence_aware_fusion_spec.md  figure_05_ood_aware_evaluation_spec.md  figure_06_fusion_driver_explainability_spec.md  figure_07_recovery_decision_loop_spec.md  figure_captions_draft.md  final_figure_captions.md  final_numbered_manuscript_tables.md  final_remaining_tasks_checklist.md  hcc_ablation_report.md  hcc_citation_insertion_plan_v1.md  hcc_experimental_setup_v1.md  hcc_experimental_setup_v2.md  hcc_final_full_manuscript_audit_v1.md  hcc_final_reference_candidate_v1.csv  hcc_final_reference_candidate_v1.md  hcc_final_todo_checklist.md  hcc_introduction_v1.md  hcc_introduction_v2.md  hcc_limitations_conclusion_v2.md  hcc_manuscript_quality_check.md  hcc_methodology_v1.md  hcc_methodology_v2.md  hcc_missing_experiment_plan.md  hcc_numbered_citation_conversion_report.md  hcc_numbered_draft_cleanup_report.md  hcc_numbered_draft_final_audit.md  hcc_numbered_draft_reference_audit.csv  hcc_numbered_reference_dedup_map_v1.csv  (+60 more)
manuscript/: abstract.md  (+20 more)
(+164 files in other folders)
